ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ticketbuy.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-ticketbuy
            port:
              number: 8080
